@@ -13,5 +13,5 @@ libmwgaim_la_LDFLAGS = -module -avoid-version
 
 libmwgaim_la_LIBADD = $(MEANWHILE_LIBS)
 
-INCLUDES = $(GLIB_CFLAGS) $(GAIM_INCLUDES) $(MEANWHILE_INCLUDES)
+INCLUDES = $(GLIB_CFLAGS) $(GAIM_CFLAGS) $(MEANWHILE_INCLUDES)
 
